[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/CardPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/PriceLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ShopCardSlot.gd" type="Script" id=3]

[node name="ShopCardSlot" type="Control"]
anchor_right = 0.149414
anchor_bottom = 0.351667
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CardPanel" parent="." instance=ExtResource( 1 )]
margin_left = -63.1809
margin_top = -87.6106
margin_right = 145.819
margin_bottom = 208.389
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 1

[node name="PriceLabel" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 93.1086
margin_right = 64.0
margin_bottom = 157.109
mouse_filter = 1
[connection signal="gui_input" from="." to="." method="_on_ShopCardSlot_gui_input"]
